--- a/LoginPage.html
+++ b/LoginPage.html
@@ -3,7 +3,7 @@
 	<a href="Home.html">Home</a>
 	<a href="LoginPage.html">Sign up</a>
 	<a href="TV series1.html">TV serirs</a>
-	<a href="Movie.html">Movies</a>
+	<a href="Movies.html">Movies</a>
 	<h2 name="title">Sign up</h2>
 	<label name="name">User Name :</label>
 	<input type="text" name="name"><br>
