--- a/Movies.html
+++ b/Movies.html
@@ -17,9 +17,9 @@ a{
     border: 15px solid rgb(234,181,165);
     font-size: 25px;
     background-color:rgb(234,181,165) ;
-    padding-left: 110px;
-    padding-right: 110px;
-    margin: 10px;
+    padding-left: 100px;
+    padding-right: 100px;
+    margin: 9px;
     color: dimgrey;
 }
 body{
@@ -51,7 +51,7 @@ h3{
 </style>
 </head>
 <body>
-    <a href="Home.html">Home</a>
+    <a href="index.html">Home</a>
     <a href="LoginPage.html">Sign up</a>
     <a href="TV series1.html">TV drama</a >
     <a href="Movies.html">Movies</a >
