--- a/intex.html
+++ b/intex.html
@@ -1,11 +1,56 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
-</head>
-<body>
-<p>This is my second page
-</body>
+	<head>
+		<title>Samoyed</title>
+		<link rel="stylesheet" type="text/css" href="Website1.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
+	</head>
+	<body style="background-image: url(https://img.freepik.com/free-photo/abstract-blur-empty-green-gradient-studio-well-use-as-background-website-template-frame-business-report_1258-52616.jpg); background-repeat: no-repeat; background-size:cover; background-attachment:fixed;">
+		<h1>Welcome to the Samoyed Dog Website</h1>
+		<header>
+		<a href="Website1-1.html"><strong>Home</a></strong>
+		<a href="Website1-2.html"><strong>History</a></strong>
+		<a href="Website1-3.html"><strong>National Dog Day</a></strong>
+		<a href="Website1-4.html"><strong>Contact Us</a></strong>
+		</header>
+		<h2>About the Samoyed</h2>
+		<p style="margin-bottom: 40px;">A dog known for its striking white coat and friendly disposition, the Samoyed traces its roots to the Samoyede peoples of Northern Siberia, where Samoyeds were bred to assist with pulling and herding and were tightly integrated into human society. One of the “14 ancient breeds” most genetically similar to wolves, the modern Samoyed remains exceptionally social, loyal and vocal, with a howl in which a distant – but not too distant – echo of the wolf can still be heard.</p>
+		<img src="https://images.ctfassets.net/440y9b545yd9/49v1AZmZdiPYkJ4A3vrayj/d7d7db21fed2ef30f5b8e3899633d292/Samoyed850.jpg" width="500px"; height="250px" style="float: right;">
+		<h2>Breed Characteristics</h2>
+		<ul style="margin-bottom: 40px;">
+            <li><strong>Appearance:</strong> Samoyeds are known for their striking white coat, which is thick and fluffy. They have a distinctive "smile" and a graceful, sturdy build.</li>
+            <li><strong>Temperament:</strong> These dogs are renowned for their friendly and gentle nature. They are great with children and other pets, and they thrive on human interaction.</li>
+            <li><strong>Exercise Needs:</strong> Samoyeds are energetic and require regular exercise to stay healthy and happy. Daily walks and playtime are essential.</li>
+            <li><strong>Grooming:</strong> Their thick coat requires regular brushing to prevent matting and shedding. They also need occasional baths to keep their fur clean and healthy.</li>
+        </ul>
+        <h2>Health and Care</h2>
+            <p>Samoyeds are generally healthy dogs but can be prone to certain conditions such as hip dysplasia and eye issues. Regular veterinary check-ups and a balanced diet are crucial for their well-being.</p>
+            <p style="margin-bottom: 40px;">They are also known for their high energy levels and need mental stimulation. Engaging in interactive games and training exercises helps keep their minds sharp.</p>
+        <img src="https://media.tenor.com/X3N1ECrVfSEAAAAM/huh-dog.gif" style="float: right;" width="250px" height="200px">
+		<h2>Interesting Facts</h2>
+		<table>
+			<tr id="tr1">
+				<th>Fact</th>
+				<th>Description</th>
+			</tr>
+			<tr>
+				<td>Origin</td>
+				<td>Samoyeds were originally bred by the Samoyede people of Siberia.</td>
+			</tr>
+			<tr>
+				<td>Size</td>
+				<td>They typically weigh between 50 to 60 pounds.</td>
+			</tr>
+			<tr>
+				<td>Coat</td>
+				<td>Their coat is thick and white, designed to keep them warm in cold climates.</td>
+			</tr>
+			<tr>
+				<td>Temperament</td>
+				<td>Samoyeds are known for their friendly and playful nature.</td>
+			</tr>
+		</table>
+	</body>
 </html>
