--- a/intex.Website1-2.html
+++ b/intex.Website1-2.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-     <link rel="stylesheet" type="text/css" href="Website1.css">
+     <link rel="stylesheet" type="text/css" href="intex.Website1.css">
      <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">   
@@ -9,10 +9,10 @@
 	<body style="background-image: url(https://img.freepik.com/free-photo/abstract-blur-empty-green-gradient-studio-well-use-as-background-website-template-frame-business-report_1258-52616.jpg); background-repeat: no-repeat; background-size:cover; background-attachment:fixed;">
 		<h1>Samoyed Dogs - History</h1>
         <header>
-		<a href="Website1-1.html"><strong>Home</a></strong>
-        <a href="Website1-2.html"><strong>History</a></strong>
-        <a href="Website1-3.html"><strong>National Dog Day</a></strong>
-        <a href="Website1-4.html"><strong>Contact Us</a></strong>
+		<a href="intex.html"><strong>Home</a></strong>
+        <a href="intex.Website1-2.html"><strong>History</a></strong>
+        <a href="intex.Website1-3.html"><strong>National Dog Day</a></strong>
+        <a href="intex.Website1-4.html"><strong>Contact Us</a></strong>
         </header>
 		<h2>Summarize</h2>
 		<ol style="margin-bottom: 30px;">
