--- a/intex.Website1-3.html
+++ b/intex.Website1-3.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="Website1.css">
+	<link rel="stylesheet" type="text/css" href="intex.Website1.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
@@ -9,10 +9,10 @@
 <body style="background-image: url(https://img.freepik.com/free-photo/abstract-blur-empty-green-gradient-studio-well-use-as-background-website-template-frame-business-report_1258-52616.jpg); background-repeat: no-repeat; background-size:cover; background-attachment:fixed;">
 	<h1>National Dog Day</h1>
 	<header>
-	<a href="Website1-1.html"><strong>Home</a></strong>
-	<a href="Website1-2.html"><strong>History</a></strong>
-	<a href="Website1-3.html"><strong>National Dog Day</a></strong>
-	<a href="Website1-4.html"><strong>Contact Us</a></strong>
+	<a href="intex.html"><strong>Home</a></strong>
+	<a href="intex.Website1-2.html"><strong>History</a></strong>
+	<a href="intex.Website1-3.html"><strong>National Dog Day</a></strong>
+	<a href="intex.Website1-4.html"><strong>Contact Us</a></strong>
 	</header>
 	<p>August 26th is National Dog Day, and we're gearing up to celebrate all of our furry friends in the best way possible! It's time to pull out all the pictures of your pups and share your love for them with the world!</p>
 	<p>National Dog Day is a great way to connect with your audience and showcase one of the most beloved animals of all time. On this day, we'll be gathering thousands of dogs from all over the place, and if you're a dog lover too, we hope you'll join us. Together, we are calling attention to the number of homeless dogs and actively encouraging people looking for a dog to visit adoption shelters instead of pet stores.</p>
