--- a/intex.html
+++ b/intex.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Samoyed</title>
-		<link rel="stylesheet" type="text/css" href="Website1.css">
+		<link rel="stylesheet" type="text/css" href="intex.Website1.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inria+Sans:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
@@ -10,10 +10,10 @@
 	<body style="background-image: url(https://img.freepik.com/free-photo/abstract-blur-empty-green-gradient-studio-well-use-as-background-website-template-frame-business-report_1258-52616.jpg); background-repeat: no-repeat; background-size:cover; background-attachment:fixed;">
 		<h1>Welcome to the Samoyed Dog Website</h1>
 		<header>
-		<a href="Website1-1.html"><strong>Home</a></strong>
-		<a href="Website1-2.html"><strong>History</a></strong>
-		<a href="Website1-3.html"><strong>National Dog Day</a></strong>
-		<a href="Website1-4.html"><strong>Contact Us</a></strong>
+		<a href="intex.html"><strong>Home</a></strong>
+		<a href="intex.Website1-2.html"><strong>History</a></strong>
+		<a href="intex.Website1-3.html"><strong>National Dog Day</a></strong>
+		<a href="intex.Website1-4.html"><strong>Contact Us</a></strong>
 		</header>
 		<h2>About the Samoyed</h2>
 		<p style="margin-bottom: 40px;">A dog known for its striking white coat and friendly disposition, the Samoyed traces its roots to the Samoyede peoples of Northern Siberia, where Samoyeds were bred to assist with pulling and herding and were tightly integrated into human society. One of the “14 ancient breeds” most genetically similar to wolves, the modern Samoyed remains exceptionally social, loyal and vocal, with a howl in which a distant – but not too distant – echo of the wolf can still be heard.</p>
