--- a/intex.Website1-4.html
+++ b/intex.Website1-4.html
@@ -13,6 +13,7 @@
 	<a href="intex.Website1-2.html"><strong>History</a></strong>
 	<a href="intex.Website1-3.html"><strong>National Dog Day</a></strong>
 	<a href="intex.Website1-4.html"><strong>Contact Us</a></strong>
+    <a href="intex.Website1-5.html"><strong>Contact Us</a></strong>
 	</header>
 	<div class="contact-form">
 	<h2>Get in Touch</h2>
